[project]
name = "mo"
version = "0.4.2"
description = "Methodically organize CourseKata Data."
authors = [{ name = "Adam Blake", email = "adam@coursekata.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.11.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "rich>=13.9.3",
    "typer>=0.12.5",
]

[project.scripts]
mo = "mo.cli:app"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyarrow>=18.0.0",
    "pyright[nodejs]>=1.1.386",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "I",   # isort
  "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
